@@ -5,11 +5,13 @@ and using the library.
 
 To get started quickly on a Windows system with MSVC7 use the command line.
 1) Run VCVARS32.BAT to set the environment.
-2) Edit include/pqxx/config.h and include/pqxx/libconfig.h to fit your
+2) Edit win32/common to reflect the correct paths to your PostgreSQL includes
+   and library files.
+3) Edit include/pqxx/config.h and include/pqxx/libconfig.h to fit your
    compilation environment, or if you have Cygwin (or another Unix-like set of
    tools), just run the "configure" script found in the main directory.
-3) Modify the libpqxx.mak if necessary.  See "Changing the makefile" below.
-4) Now "nmake /f libpqxx.mak ALL" will compile all dynamic, static, debug and 
+4) Modify the libpqxx.mak if necessary.  See "Changing the makefile" below.
+5) Now "nmake /f libpqxx.mak ALL" will compile all dynamic, static, debug and 
    release libraries. You will find them in the win32\lib directory.
    
 To create the test files
